created migrations, added article and comment models

--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -2,10 +2,10 @@
   .ui.column
     .content
       .ui.attached.segment
-        %h1.ui.header Title
+        %h1.ui.header=@article.title
         .metadata
           .date 45 min ago
-      .ui.attached.segment TEXT
+      .ui.attached.segment=@article.content
       .ui.attached.segment.CommentsBlock
         .ui.comments
           - for i in 0..5
