fixed comment create params list in controller and form view

--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -57,4 +57,5 @@
           .field{'data-field' => 'content'}
             %label Your comment
             %textarea{name: 'comment[content]'}
+            %input{type:'hidden', name: 'comment[article_id]', value: @article.id}
           %button.ui.submit.button{type: 'submit'} Submit
