added: creating comment and nested comment be form

--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -6,6 +6,7 @@
         .metadata
           .date 45 min ago
       .ui.attached.segment=@article.content
+      %input.ArticleIdInput{type: 'hidden', value: @article.id}
       .ui.attached.segment.CommentsBlock
         .ui.comments
           - @comments.each do |comment|
