added seeds and time duration for comment

--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -18,7 +18,7 @@
                   .CommentItem
                     %a.author=comment.user_name
                     .metadata
-                      .date 45 min ago
+                      .date.CommentDateDuration 45 min ago
                     .mini.ui.icon.button.RatingButtonMinus
                       %i.icon.minus
                     %span.CommentRating=comment.rating 
