insert comment which has been added

--- a/app/views/main/_comment_view.html.haml
+++ b/app/views/main/_comment_view.html.haml
@@ -1,5 +1,5 @@
 %a.avatar
-  %img.ui.tiny.circular.image{src: image_path(comment.user_avatar) }
+  %img.ui.tiny.image.circular{src: image_path(comment.user_avatar) }
 .content
   .CommentItem
     %a.author=comment.user_name
