--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,6 +1,6 @@
 .ui.column.page.grid.main#TestTaskView
   .ui.column
-    .content
+    .content.TestTaskPageContent
       .ui.attached.segment
         %h1.ui.header=@article.title
         .metadata
@@ -8,29 +8,27 @@
       .ui.attached.segment=@article.content
       %input.ArticleIdInput{type: 'hidden', value: @article.id}
       .ui.attached.segment.CommentsBlock
-        .ui.comments
+        .ui.comments.MainContentBlock
           - @comments.each do |comment|
             -if comment.parent.nil?
               .ui.comment
                 = render 'comment_view', comment: comment, deeps: 0
                 .ui.comments
-                  .ui.comment
-                    - comment.children.each do |comment|
-                      = render 'comment_view', comment: comment, deeps: 1
-                      .ui.comments
-                        .ui.comment
-                          - comment.children.each do |comment|
-                            = render 'comment_view', comment: comment, deeps: 2
+                  - comment.children.each do |comment|
+                    = render 'comment_view', comment: comment, deeps: 1
+                    .ui.comments
+                      - comment.children.each do |comment|
+                        = render 'comment_view', comment: comment, deeps: 2
       .ui.attached.segment
-        %form.ui.form.AjaxForm.Validation{action: comment_path, method: 'POST'}
-          .three.wide.field{'data-field' => 'user_name'}
-            %label Name
-            %input{name: 'comment[user_name]', placeholder: 'Name'}
-          .three.wide.field{'data-field' => 'user_email'}
-            %label Email
-            %input{name: 'comment[user_email]', placeholder: 'Email'}
-          .field{'data-field' => 'content'}
-            %label Your comment
-            %textarea{name: 'comment[content]'}
-            %input{type:'hidden', name: 'comment[article_id]', value: @article.id}
-          %button.ui.submit.button{type: 'submit'} Submit
+        / %form.ui.form.AjaxForm.Validation{action: comment_index_path, method: 'POST'}
+        /   .three.wide.field{'data-field' => 'user_name'}
+        /     %label Name
+        /     %input{name: 'comment[user_name]', placeholder: 'Name'}
+        /   .three.wide.field{'data-field' => 'user_email'}
+        /     %label Email
+        /     %input{name: 'comment[user_email]', placeholder: 'Email'}
+        /   .field{'data-field' => 'content'}
+        /     %label Your comment
+        /     %textarea{name: 'comment[content]'}
+        /     %input{type:'hidden', name: 'comment[article_id]', value: @article.id}
+        /   %button.ui.submit.button{type: 'submit'} Submit
